small refactoring for caching artifacts
